--- a/views/layouts/boilerPlate.ejs
+++ b/views/layouts/boilerPlate.ejs
@@ -19,7 +19,7 @@
 
  <%- include("../includes/navbar.ejs") %>
   <div class="underline container">
-   
+     <%- include("../includes/flash.ejs") %>
     <%- body %>
   </div>
   
