--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -9,8 +9,18 @@
         <a class="nav-link " aria-current="page" href="/">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Add New Listings</a>
-        
-      </div>
+          </div>
+        <div class="navbar-nav ms-auto">
+          <%if(!currUser){%>
+          <a class="nav-link" href="/signup">SignUp</a>
+          <a class="nav-link" href="/login">Login</a>
+          <%}%>
+          <%if(currUser){%>
+          <a class="nav-link" href="/logout">logOut</a>
+          <%}%>
+          
+        </div>
+    
     </div>
   </div>
 </nav>
