--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,29 +5,34 @@
      <h3><b><%=listing.title%></b></h3>
    </div>
     <div class="card ab col-6 offset-3">
-        <img src="<%=listing.image %>" alt="listing_image" class="card-img-top show-img">
+        <img src="<%=listing.image %>" 
+        alt="listing_image" class="card-img-top show-img">
         <div class="card-body">
-                <p class="card-text">
-                    <%=listing.description%></br>
-                    &#8377;<%=listing.price.toLocaleString("en-IN")%> </br>
-                    <%=listing.location%></br>
-                    <%=listing.country %></br>
-                  </p>
+            
+                <p class="card-text">Owned by  <i><%=listing.owner.username %></i></p>
+                <p class="card-text"> <%=listing.description%></p>
+                <p class="card-text">&#8377;<%=listing.price.toLocaleString("en-IN")%></p>
+                <p class="card-text"><%=listing.location%></p>
+                <p class="card-text"><%=listing.country %></p>
                 
         </div>
     </div>
    </br>
-   <div class=" btns">
+   <% if(currUser&& currUser._id.equals(listing.owner._id)){%>
+    <div class=" btns">
      <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
       
       <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
         <button class="btn btn-dark offset-5">Delete</button>
-        </div>
-     </form> 
+      </form> 
+    </div>
+
+    <%}%>
 
 <div class="col-8 offset-2">
   <h4>Leave A Review</h4>
-  <hr>
+
+  <% if(currUser){ %>
   <form action="/listings/<%=listing.id%>/reviews" novalidate  method="post" class="mb-3 needs-validation">
     <div class="mb-3 mt-3">
       <label for="rating" class="form-label">Rating</label>
@@ -39,7 +44,9 @@
       <div class="invalid-feedback">Add some comment for review</div>
     </div>
     <button class="btn btn-outline-dark">Submit</button>
+
   </form>
+   <%}%>
 
  <hr>
 
@@ -51,7 +58,7 @@
 <div class="card col-5 ms-3 mb-3">
 
   <div class="card-body">
-    <h5 class="card-title">Jane Doe</h5>
+    <h5 class="card-title">@<%=review.author.username%></h5>
     <p class="card-text"><%= review.comment %></p>
     <p class="card-text"><%= review.rating %> Stars</p>
     <form action="/listings/<%= listing._id%>/reviews/<%= review._id %>?_method=DELETE" class="mb-3" method="post" >
