--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,22 +1,52 @@
+<style>
+  .search-btn{
+      color: #fff;
+       background-color: #fe424d;
+       border-radius: 25px;
+       padding: 0 1.5rem 0 1.5rem;
+       display: flex;
+       align-items: center;
+       
+  }
+   .search-btn:hover{
+      color: #fff;
+       background-color: #fe424d;
+   }
+   .btnn {
+      gap: 0.5rem;
+   }
+   .search-inp{
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+   }
+</style>
+
 <nav class="navbar  navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+    <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link " aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/listings">All Listings</a>
-        <a class="nav-link" href="/listings/new">Add New Listings</a>
+      
+        <a class="nav-link" href="/listings">Explore</a>
+
+          </div>
+          <div class="ms-auto">
+             <form action="" class="d-flex btnn" role="search">
+              <input type="search" placeholder="Search destinations" class=" search-inp form-control me-to" id="">
+              <button class="btn btn-search search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
+             </form>
           </div>
         <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="/listings/new">Add New Listings</a>
           <%if(!currUser){%>
-          <a class="nav-link" href="/signup">SignUp</a>
-          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/signup"><b>SignUp</b></a>
+          <a class="nav-link" href="/login"><b>Login</b></a>
           <%}%>
           <%if(currUser){%>
-          <a class="nav-link" href="/logout">logOut</a>
+          <a class="nav-link" href="/logout"><b>logOut</b></a>
           <%}%>
           
         </div>
