--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -5,7 +5,7 @@
     <h3>
         Edit a  listing:
     </h3>
-    <form method="post" action="/listings/<%=listing._id%>?_method=PUT" class="needs-validation" novalidate>
+    <form method="post" action="/listings/<%=listing._id%>?_method=PUT" class="needs-validation" novalidate enctype="multipart/form-data">
       <div class="mb-3">
              <label for="title" class="form-label">Title</label>
              <input name="listing[title]" class="form-control" value="<%=listing.title%>" type="text" required>
@@ -19,9 +19,13 @@
       
         <div class="invalid-feedback">description should be valid</div>
           </div>
+           <div class="mb-3">
+            <p>Original Listing Image</p>
+            <img src="<%= originalImageUrl%>" alt="">
+        </div>
         <div class="mb-3">
-            <label for="image" class="form-label">Image</label>
-            <input name="listing[image]" class="form-control" value="<%=listing.image%>" type="text" required>
+            <label for="image" class="form-label">Update New Image</label>
+            <input name="listing[image]" class="form-control" type="file">
         </div>
         <div class="row">
           <div class="mb-3 col-md-4">
