--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,7 +5,7 @@
      <h3><b><%=listing.title%></b></h3>
    </div>
     <div class="card ab col-6 offset-3">
-        <img src="<%=listing.image %>" 
+        <img src="<%=listing.image.url %>" 
         alt="listing_image" class="card-img-top show-img">
         <div class="card-body">
             
@@ -70,10 +70,11 @@
 
 
 
-   <p><b>All Reviews</b></p>
+   <% if(listing.reviews.length > 0) { %>
    <div class="row">
+    <p><b>All Reviews</b></p>
        <%  for(review of listing.reviews){%>
-<div class="card col-5 ms-3 mb-3">
+    <div class="card col-5 ms-3 mb-3">
 
   <div class="card-body">
     <h5 class="card-title">@<%=review.author.username%></h5>
@@ -90,7 +91,10 @@
 </div>
   <%}%> 
      </div>
+   <% } %>
+  
 </div>
 </div>
+
 
     
